tests/baselines/reference/cloduleStaticMembers.errors.txt
tests/cases/compiler/cloduleStaticMembers.ts(6,13): error TS8010: Property 'x' is private and only accessible within struct 'Clod'.
tests/cases/compiler/cloduleStaticMembers.ts(7,13): error TS2304: Cannot find name 'x'.
tests/cases/compiler/cloduleStaticMembers.ts(10,13): error TS2304: Cannot find name 'y'.


==== tests/cases/compiler/cloduleStaticMembers.ts (3 errors) ====
    class Clod {
        private static x = 10;
        public static y = 10;
    }
    module Clod {
        var p = Clod.x;
                ~~~~~~
!!! error TS8010: Property 'x' is private and only accessible within struct 'Clod'.
        var q = x;
                ~
!!! error TS2304: Cannot find name 'x'.
    
        var s = Clod.y;
        var t = y; 
                ~
!!! error TS2304: Cannot find name 'y'.
    }
    